Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2575

Building of qmldumper fails for Symbian targets

    XMLWordPrintable

Details

    • a5c7d465abec73fc2e01684957679682ccf2bb09

    Description

      It tries to build qmldumper.exe for winscw_udeb. Even though my Symbian app target has a different toolchain_configuration than winscw_udeb. Therfore that fails:

      Could not build QML plugin dumping helper for "4.8.0 Symbian subst_k"
      Output:
      "Building helper library 'qmldump' in K:/qt/qtc-qmldump/

      Running K:/epoc32/tools/make.exe distclean...
      sbs reallyclean -c winscw_udeb.mwccinc -c armv5_udeb -c armv6_udeb -c armv5_urel -c armv6_urel

      no warnings or errors

      Run time 2 seconds

      sbs: build log in K:/epoc32/build/Makefile.2010-10-01-19-27-19.log

      Running k:/qt/bin/qmake.exe ...

      Running K:/epoc32/tools/make.exe ...
      sbs -c winscw_udeb.mwccinc
      resource : epoc32\data\z\resource\apps\qmldump.rsc [winscw_udeb.mwccinc]
      resource : epoc32\data\z\private\10003a3f\import\apps\qmldump_reg.rsc [winscw_udeb.mwccinc]
      sbs: warning: Missing dependency detected: K:/epoc32/release/winscw/udeb/QtDeclarative.lib
      sbs: warning: Missing dependency detected: K:/epoc32/release/winscw/udeb/qtmain.lib
      sbs: warning: Missing dependency detected: K:/epoc32/release/winscw/udeb/QtCore.lib
      sbs: warning: Missing dependency detected: K:/epoc32/release/winscw/udeb/QtGui.lib
      compile : ..\..\epoc32\build\qtc-qmldump\c_ade1c6db4278d17a\qmldump_exe\winscw\udeb\qmldump.UID.CPP [winscw_udeb.mwccinc]
      compile : main.cpp [winscw_udeb.mwccinc]
      target : epoc32\release\winscw\udeb\qmldump.exe [winscw_udeb.mwccinc]
      checklib: error: couldn't open file.

      sbs : warnings: 4
      sbs : errors: 3

      Run time 6 seconds

      sbs: build log in K:/epoc32/build/Makefile.2010-10-01-19-27-24.log

      FAILED win32simplelink for winscw_udeb.mwccinc: epoc32\release\winscw\udeb\qmldump.exe
      mmp: qmldump_exe.mmp
      make[1]: *** [K:/epoc32/release/winscw/udeb/qmldump.exe] Error 1
      sbs: error: The make-engine exited with errors.
      K:\epoc32\tools\make.exe: *** [debug-winscw] Error 1
      "

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ckamm Christian Kamm
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes