Debugging helpers: Only build qmldump/qmlobserver for desktop targets.

Task-number: QTCREATORBUG-2575
Reviewed-by: Kai Koehne